@@ -4,3 +4,4 @@ output.naomi
 .classpath
 output.soffit
 input.soffit
+OutputSoffit.soffit
