@@ -37,6 +37,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Stack;
 
@@ -53,7 +54,11 @@ public class SoffitUtil {
 	
 	public static final String SOFFIT_START = "__SoffitStart";
 	public static final String SOFFIT_END = "__SoffitEnd";
+	public static final byte[] SOFFIT_START_BYTES = SOFFIT_START.getBytes();
+	public static final byte[] SOFFIT_END_BYTES = SOFFIT_END.getBytes();
 	public static final char ESCAPE_SEQUENCE = '\\';
+	static final byte[] OPEN_CURLY = "{".getBytes();
+	static final byte[] CLOSING_CURLY = "}".getBytes();
 	
 	private static int lineNumber = 0;
 	
@@ -62,17 +67,22 @@ public class SoffitUtil {
 	 * @param stream
 	 * @return The SOFFIT root object as parsed from the InputStream.
 	 * @throws SoffitException
+	 * @throws IOException 
 	 */
-	public static SoffitObject ReadStream(InputStream stream) throws SoffitException {
+	public static SoffitObject ReadStream(InputStream stream) throws SoffitException, IOException {
 		lineNumber = 0;
+		
+		//This is an internal buffer used for combining chars/strings, and the number passed into this constructor is ultimately how many characters can be in a line.
+		//Rather large buffer to account for an absurdly long line
+		ArrayOutputStream internalStream = new ArrayOutputStream(65536);
 		
 		SoffitObject root = new SoffitObject(null, null);
 		
-		String header = getLine(stream);
-		if(!header.equals(SOFFIT_START))
+		byte[] header = getLine(stream, internalStream);
+		if(!areBytesEqual(header, SOFFIT_START_BYTES))
 			throw new SoffitException("SOFFIT header not found.");
 		
-		parseObject(stream, root);
+		parseObject(stream, root, internalStream);
 		
 		return root;
 	}
@@ -82,20 +92,23 @@ public class SoffitUtil {
 	 * @param root
 	 * @param output
 	 */
-	public static void WriteStream(SoffitObject root, OutputStream output) throws IOException{
+	public static void WriteStream(SoffitObject root, OutputStream output) throws IOException {
 		BufferedOutputStream bStream = new BufferedOutputStream(output);
+		//This is an internal buffer used for combining chars/strings, and the number passed into this constructor is ultimately how many characters can be in a line.
+		//Rather large buffer to account for an absurdly long line
+		ArrayOutputStream internalStream = new ArrayOutputStream(65536);
 		
 		//Write header
-		byte[] lineBytes = convertLineToBytes(SOFFIT_START + "\n");
+		byte[] lineBytes = (SOFFIT_START + "\n").getBytes();
 		bStream.write(lineBytes);
 		bStream.flush();
 	
 		//Write the object itself
-		writeObjects(root, bStream);
+		writeObjects(root, bStream, internalStream);
 		bStream.flush();
 		
 		//Write footer
-		lineBytes = convertLineToBytes(SOFFIT_END + "\n");
+		lineBytes = (SOFFIT_END + "\n").getBytes();
 		bStream.write(lineBytes);
 		bStream.flush();
 	}
@@ -122,8 +135,10 @@ public class SoffitUtil {
 	 * Convenience method to read a Soffit stream from a formatted string.
 	 * @param stream
 	 * @return
+	 * @throws IOException 
+	 * @throws SoffitException 
 	 */
-	public static SoffitObject ReadStreamFromString(String stream) {
+	public static SoffitObject ReadStreamFromString(String stream) throws SoffitException, IOException {
 		ByteArrayInputStream bais = new ByteArrayInputStream(stream.getBytes());
 		return ReadStream(bais);
 	}
@@ -132,10 +147,7 @@ public class SoffitUtil {
 	 * Writes fields first, and then every object recursively.
 	 * @throws IOException 
 	 */
-	private static void writeObjects(SoffitObject object, BufferedOutputStream bStream) throws IOException {
-		String line = null;
-		byte[] lineBytes = null;
-		
+	private static void writeObjects(SoffitObject object, BufferedOutputStream bStream, ArrayOutputStream internalStream) throws IOException {		
 		//Write the fields first
 		for(int i = 0; i < object.getAllFields().size(); i++) {			
 			//Write the line containing a field...
@@ -146,7 +158,7 @@ public class SoffitUtil {
 			if(field.getValue() == null)
 				throw new NullPointerException("Value assigned to SOFFIT field \"" + field.getName() + "\" is a null pointer.");
 		
-			bStream.write(convertFieldToLineBytes(field));
+			bStream.write(convertFieldToLineBytes(field, internalStream));
 			bStream.flush();
 		}
 		
@@ -155,65 +167,63 @@ public class SoffitUtil {
 			
 			SoffitObject currentObject = object.getAllObjects().get(i);
 			//Write the line the object declaration...
-			bStream.write(convertObjectDeclarationToLineBytes(currentObject));
+			bStream.write(convertObjectDeclarationToLineBytes(currentObject, internalStream));
 			bStream.flush();
 			
 			//Recursively write the next fields and object declarations.
-			writeObjects(currentObject, bStream);
+			writeObjects(currentObject, bStream, internalStream);
 			
 			//Write closing brackets.
-			line = "";
-			
+			internalStream.reset();
 			//Set indentation
 			if(currentObject.getParent() != null) {
 				for(int i2 = 0; i2 < currentObject.getNestedLevel(); i2++) {
-					line += "\t";
+					internalStream.write((byte) '\t');
 				}	
 			}
 			
-			line += "}\n";
-			
-			//Convert to byte array.
-			lineBytes = convertLineToBytes(line);
+			internalStream.write((byte) '}');
+			internalStream.write((byte) '\n');
 			
 			//Flush the output stream.
-			bStream.write(lineBytes);
+			bStream.write(internalStream.getWrittenBytes());
 			bStream.flush();
 		}
 	}	
 	
 	/**
 	 * Parses and interprets SoffitObjects and its contained SoffitFields and nested SoffitObjects.
+	 * @throws IOException 
 	 */
 	
-	private static void parseObject(InputStream stream, SoffitObject parent) throws SoffitException {
+	private static void parseObject(InputStream stream, SoffitObject parent, ArrayOutputStream internalStream) throws SoffitException, IOException {
 		Stack<SoffitObject> stack = new Stack<>();
 		stack.push(parent);
 		
 		while (!stack.isEmpty()) {
 			SoffitObject currentObject = stack.peek();
-			String line = getLine(stream);
+			byte[] line = getLine(stream, internalStream);
 			
 			//If we didn't get anything, then break out.
 			if (line == null) {
 			    throw new SoffitException("Incomplete SOFFIT stream.");
 			}
 			
-			ArrayList<String> tokens = getLineTokens(line);
+			ArrayList<byte[]> tokens = getLineTokens(line, internalStream);
 			
 			//Ensure there are no double quotes in first token (The first token would be an object type, field name, or closing bracket)
 			if(containsCharacter(tokens.get(0), '"'))
 				throw new SoffitException("SOFFIT syntax error.", lineNumber);
 			
 			//Closing Bracket
-			if (tokens.size() == 1 && tokens.get(0).equals("}")) {
+			if (tokens.size() == 1 && areBytesEqual(tokens.get(0), CLOSING_CURLY)) {
 				if (!currentObject.isRoot()) {
 					stack.pop();
 				} else {
 					throw new SoffitException("SOFFIT stream contained too many closing brackets.", lineNumber);
 				}
 			//SOFFIT Footer
-			} else if (tokens.get(0).equals(SOFFIT_END)) {
+			} else if (areBytesEqual(tokens.get(0), SOFFIT_END_BYTES)) {
 				if (!currentObject.isRoot()) {
 					throw new SoffitException("SOFFIT footer encountered in non-root object.", lineNumber);
 				}
@@ -221,40 +231,42 @@ public class SoffitUtil {
 			//Handle Objects
 			} else if (isObject(tokens)) {
 				SoffitObject object;
-				String type = tokens.get(0);
+				byte[] type = tokens.get(0);
 				
 				if(tokens.size() == 2) {
-					object = new SoffitObject(type, null);
+					object = new SoffitObject(new String(type, StandardCharsets.US_ASCII));
 				} else {
-					String name = stripQuotations(tokens.get(1));
+					byte[] name = stripQuotations(tokens.get(1));
 					
 					//Check for proper escape sequences
 					try {
-						name = convertFromEscapeSequence(name);
+						name = convertFromEscapeSequence(name, internalStream);
 					} catch (SoffitException e) {
 						throw new SoffitException(e, lineNumber);
 					}
-					object = new SoffitObject(type, name);
+					object = new SoffitObject(new String(type, StandardCharsets.US_ASCII), new String(name, StandardCharsets.US_ASCII));
 				}
 				
 				currentObject.add(object);
 				stack.push(object);
 			//Handle Fields
 			} else if (isField(tokens)) {
-				String name = tokens.get(0);
-				String value = "";
+				byte[] name = tokens.get(0);
 				
 				//Set value, if defined.
-				if(tokens.size() > 1)
-					value = stripQuotations(tokens.get(1));
+				if(tokens.size() > 1) {
+					byte[] value = stripQuotations(tokens.get(1));
 			
-				// Check for proper escape sequences
-				try {
-					value = convertFromEscapeSequence(value);
-				} catch (SoffitException e) {
-					throw new SoffitException(e, lineNumber);
+					// Check for proper escape sequences
+					try {
+						value = convertFromEscapeSequence(value, internalStream);
+					} catch (SoffitException e) {
+						throw new SoffitException(e, lineNumber);
+					}
+					currentObject.add(new SoffitField(new String(name, StandardCharsets.US_ASCII), new String(value, StandardCharsets.US_ASCII)));
+				} else {
+					currentObject.add(new SoffitField(new String(name, StandardCharsets.US_ASCII), ""));
 				}
-				currentObject.add(new SoffitField(name, value));
 			} else {
 			    throw new SoffitException("SOFFIT syntax error.", lineNumber);
 			}
@@ -263,75 +275,73 @@ public class SoffitUtil {
 	
 	/**
 	 * Internal to the parseObject method.
+	 * @throws IOException 
 	 */
-	private static ArrayList<String> getLineTokens(String s) {
-		String line = s;
-		ArrayList<String> tokens = new ArrayList<>();
+	private static ArrayList<byte[]> getLineTokens(byte[] line, ArrayOutputStream tokenStream) throws IOException {
+		ArrayList<byte[]> tokens = new ArrayList<>();
 		
 		int mark = 0;
-		String nextToken = null;
+		byte[] nextToken = null;
 		
 		try {
 			while(true) {
-				nextToken = "";
+				tokenStream.reset();
 				
 				//Look for quotes
-				if(line.charAt(mark) == '"') {
+				if(line[mark] == (byte) '"') {
 					
-					nextToken += line.charAt(mark);
+					tokenStream.write(line[mark]);
 					mark++;
 					for(int i = mark;; i++) {
 						mark++;
 						
 						//Check for escape sequence.
-						if(line.charAt(i) == '\\') {
-							if(line.charAt(i + 1) == '"') {
-								nextToken += '"';
+						if(line[i] == (byte) '\\') {
+							if(line[i + 1] == (byte) '"') {
+								tokenStream.write((byte) '"');
 								mark++;
 								i++;
 								continue;
 							}
 						}
 						
-						if(line.charAt(i) == '"') {
-							nextToken += line.charAt(i);
+						if(line[i] == (byte) '"') {
+							tokenStream.write(line[i]);
 							break;
 						}
 						
-						nextToken += line.charAt(i);
+						tokenStream.write(line[i]);
 					}
 				} else {
 					for(int i = mark;; i++) {
 						mark++;
 						
 						//Check for space
-						if(line.charAt(i) == ' ')
+						if(line[i] == ' ')
 							break;
 						
-						nextToken += line.charAt(i);
+						tokenStream.write(line[i]);
 					}
 				}
 				
-				if(!nextToken.isBlank() && !nextToken.isEmpty()) {
-					nextToken.strip();
+				nextToken = stripByteArray(tokenStream.getWrittenBytes());
+				if(!areBytesBlank(nextToken))
 					tokens.add(nextToken);
-				}
 			}
 		} catch (IndexOutOfBoundsException e) {
-			if(!nextToken.isBlank() && !nextToken.isEmpty()) {
-				nextToken.strip();
+			nextToken = stripByteArray(tokenStream.getWrittenBytes());
+			if(!areBytesBlank(nextToken))
 				tokens.add(nextToken);
-			}
 		}
 		
 		return tokens;
 	}
 	
-	private static String getLine(InputStream is) {
-	
+	private static byte[] getLine(InputStream is, ArrayOutputStream internalStream) {
+		
 		while(true) {
+			internalStream.reset();
 			boolean eos = false;
-			String line = "";
 			lineNumber++;
 			
 			while(true) {
@@ -351,7 +361,7 @@ public class SoffitUtil {
 					if(c == (int) '\r')
 						break;
 					
-					line += (char) c;
+					internalStream.write((byte) c);
 					
 				} catch(IOException e) {
 					//Explicitly return null
@@ -359,130 +369,182 @@ public class SoffitUtil {
 				}
 			}
 			
-			line = line.strip();
+			byte[] bytes = stripByteArray(internalStream.getWrittenBytes());
+			//String line = new String(bytes, StandardCharsets.US_ASCII);
 			
 			//Check for EOS and essentially a null line
-			if(eos && line.length() == 0)
+			if(eos && bytes.length == 0)
 				return null;
 			
 			//Return if EOS is reached
 			if(eos)
-				return line;
+				return bytes;
 			
 			//Check for blank line
-			if(line.isEmpty() || line.isBlank())
+			if(bytes.length == 0)
 				continue;
 			
 			//Check for comments
-			if(line.charAt(0) == '#')
+			if(bytes[0] == (byte) '#')
 				continue;
 			
-			if(line != null)
-				return line;
+			return bytes;
+		}
+	}
+	
+	/**
+	 * Removes whitespace from a byte array.
+	 * @param bytes
+	 * @return
+	 */
+	private static byte[] stripByteArray(byte[] bytes) {
+		int left = 0;
+		for(; left < bytes.length; left++) {
+			if(!isWhitespace(bytes[left])) {
+				break;
+			}
+		}
+		
+		int right = bytes.length - 1;
+		for(; right >= 0; right--) {
+			if(!isWhitespace(bytes[right])) {
+				break;
+			}
+		}
+		
+		byte[] strippedBytes = new byte[right - left + 1];
+		System.arraycopy(bytes, left, strippedBytes, 0, strippedBytes.length);
+		return strippedBytes;
+	}
+	
+	private static boolean areBytesBlank(byte[] bytes) {
+		if(bytes.length == 0)
+			return true;
+		
+		for(int i = 0; i < bytes.length; i++) {
+			if(!isWhitespace(bytes[i]))
+				return false;
+		}
+		
+		return true;
+	}
+	
+	private static boolean isWhitespace(int i) {
+		switch(i) {
+		//tab
+		case 9:
+		//space
+		case 32:
+			return true;
+			
+		default:
+			return false;
 		}
 	}
 	
 	/**
 	 * Internal to the writeObject method.
+	 * @throws IOException 
 	 */
-	private static byte[] convertFieldToLineBytes(SoffitField field) {
+	private static byte[] convertFieldToLineBytes(SoffitField field, ArrayOutputStream internalStream) throws IOException {
+		internalStream.reset();
 		
 		String name = field.getName();
 		String value = field.getValue();
 		
-		String line = "";
-		
 		//Set indentation
 		for(int i = 0; i < field.getNestingLevel(); i++) {
-			line += '\t';
+			internalStream.write((byte) '\t');
 		}
 		
 		//Name
 		for(int i = 0; i < name.length(); i++) {
-			line += name.charAt(i);
+			internalStream.write((byte) name.charAt(i));
 		}
-		line += ' ';
+		internalStream.write((byte) ' ');
 		
 		//Value
 		//Check for blank value
 		if(!field.getValue().isEmpty()) {
-			line += '"';
-			value = convertToEscapeSequence(value);
-			for(int i = 0; i < value.length(); i++) {
-				//Add all normal characters
-				line += value.charAt(i);
-			}
-			line += '"';
+			internalStream.write((byte) '"');
+			
+			internalStream.mark();
+			byte[] valueBytes = convertToEscapeSequence(value, internalStream);
+			internalStream.goToMark();
+			
+			internalStream.write(valueBytes);
+			internalStream.write((byte) '"');
 		}
 		
-		line += "\n";
-		
-		return convertLineToBytes(line);
+		internalStream.write((byte) '\n');
+		return internalStream.getWrittenBytes();
 	}
 	
-	/**
-	 * Internal to the writeObjects method.
-	 */
-	private static byte[] convertObjectDeclarationToLineBytes(SoffitObject object) {		
+	private static byte[] convertObjectDeclarationToLineBytes(SoffitObject object, ArrayOutputStream internalStream) throws IOException {
+		internalStream.reset();
+		
 		String type = object.getType();
 		String name = object.getName();
 		
-		String line = "";
-		
 		//Set indentation
 		for(int i = 0; i < object.getNestedLevel(); i++) {
-			line += '\t';
+			internalStream.write((byte) '\t');
 		}
 		
 		//Type
 		for(int i = 0; i < type.length(); i++) {
-			line += type.charAt(i);
+			internalStream.write((byte) type.charAt(i));
 		}
-		line += " ";
+		internalStream.write((byte) ' ');
 		
 		//name
 		if(name.length() > 0 && name != null) {
-			line += '"';
-			name = convertToEscapeSequence(name);
-			for(int i = 0; i < name.length(); i++) {
-				//Add all normal characters
-				line += name.charAt(i);
-			}
-			line += "\" ";
+			internalStream.write((byte) '"');
+			
+			internalStream.mark();
+			byte[] valueBytes = convertToEscapeSequence(name, internalStream);
+			internalStream.goToMark();
+			
+			internalStream.write(valueBytes);
+			internalStream.write((byte) '"');
+			internalStream.write((byte) ' ');
 		}
-		line += "{\n";
+		internalStream.write((byte) '{');
+		internalStream.write((byte) '\n');
 		
-		return convertLineToBytes(line);
+		return internalStream.getWrittenBytes();
 	}
 	
 	/**
 	 * Internal to the parseObject method.
+	 * @throws IOException 
 	 */
-	private static String convertFromEscapeSequence(String s) {
+	private static byte[] convertFromEscapeSequence(byte[] s, ArrayOutputStream internalStream) throws IOException {
 		
-		String convertedString = "";
+		//String convertedString = "";
+		internalStream.reset();
 		
-		for(int i = 0; i < s.length(); i++) {
+		for(int i = 0; i < s.length; i++) {
 			//Look for escape character
-			if(s.charAt(i) == '\\') {
+			if(s[i] == (byte) '\\') {
 				
 				//Double quote
-				if(s.charAt(i + 1) == '"') {
-					convertedString += '"';
+				if(s[i + 1] == (byte) '"') {
+					internalStream.write((byte) '"');
 					i++;
 					continue;
 				}
 				
 				//Newline
-				if(s.charAt(i + 1) == 'n') {
-					convertedString += '\n';
+				if(s[i + 1] == 'n') {
+					internalStream.write((byte) '\n');
 					i++;
 					continue;
 				}
 				
 				//Backslash
-				if(s.charAt(i + 1) == '\\') {
-					convertedString += '\\';
+				if(s[i + 1] == '\\') {
+					internalStream.write((byte) '\\');
 					i++;
 					continue;
 				}
@@ -491,58 +553,61 @@ public class SoffitUtil {
 			}
 			
 			//Add all normal characters
-			convertedString += s.charAt(i);
+			internalStream.write(s[i]);
 		}
 		
-		return convertedString;
+		return internalStream.getWrittenBytes();
 	}
 	
-	private static String convertToEscapeSequence(String s) {
-		String convertedString = "";
+	private static byte[] convertToEscapeSequence(String s, ArrayOutputStream internalStream) throws IOException {
+		//String convertedString = "";
 		for(int i = 0; i < s.length(); i++) {
 			//Double quote correction
 			if(s.charAt(i) == '"') {
-				convertedString += "\\\"";
+				internalStream.write((byte) '\\');
+				internalStream.write((byte) '"');
 				continue;
 			}
 			//Newline correction
 			if(s.charAt(i) == '\n') {
-				convertedString += "\\n";
+				internalStream.write((byte) '\\');
+				internalStream.write((byte) 'n');
 				continue;
 			}
 			//Backslash correction
 			if(s.charAt(i) == ESCAPE_SEQUENCE) {
-				convertedString += "\\\\";
+				internalStream.write((byte) '\\');
+				internalStream.write((byte) '\\');
 				continue;
 			}
 			
 			//Add all normal characters
-			convertedString += s.charAt(i);
+			internalStream.write((byte) s.charAt(i));
 		}
 		
-		return convertedString;
+		//return convertedString;
+		return internalStream.getWrittenBytesFromMark();
 	}
 	
-	private static String stripQuotations(String s) {
-		String stripped = "";
-		for(int i = 0; i < s.length() - 2; i++) {
-			stripped += s.charAt(i + 1);
-		}
+	private static byte[] stripQuotations(byte[] s) {
+		byte[] stripped = new byte[s.length - 2];
+		System.arraycopy(s, 1, stripped, 0, stripped.length);
 		return stripped;
 	}
 	
-	private static boolean isField(ArrayList<String> tokens) {
+	private static boolean isField(ArrayList<byte[]> tokens) {
 		if(tokens.size() > 2)
 			return false;
 		
-		String lastToken = tokens.get(tokens.size() - 1);
+		byte[] lastToken = tokens.get(tokens.size() - 1);
 		
 		//Bracket indicates object
-		if(lastToken.equals("{"))
+		//TODO: is this redundant?  This seems logically accounted for in the parseObject method
+		if(areBytesEqual(lastToken, OPEN_CURLY))
 			return false;
 		
 		//Check for quotes
-		if(lastToken.charAt(0) == '"' && lastToken.charAt(lastToken.length() - 1) == '"')
+		if(lastToken[0] == (byte) '"' && lastToken[lastToken.length - 1] == (byte) '"')
 			return true;
 		
 		//Null field
@@ -554,27 +619,27 @@ public class SoffitUtil {
 		return false;
 	}
 	
-	private static boolean isObject(ArrayList<String> tokens) {
+	private static boolean isObject(ArrayList<byte[]> tokens) {
 		
 		//Check requirements for object without a name
 		if(tokens.size() == 2) {
-			//Check for trailing bracket
+			//Check for open bracket
 			//Bracket is required to be an object
-			String lastToken = tokens.get(1);
-			if(lastToken.equals("{"))
+			byte[] lastToken = tokens.get(1);
+			if(areBytesEqual(lastToken, OPEN_CURLY))
 				return true;
 		}
 		
 		//Check requirements for object with a name
 		if(tokens.size() == 3) {
-			String token2 = tokens.get(1);
-			String token3 = tokens.get(2);
+			byte[] token2 = tokens.get(1);
+			byte[] token3 = tokens.get(2);
 			
 			//Verify enclosing quotes for name, if a name is specified
-			if(token2.charAt(0) == '"' && token2.charAt(token2.length() - 1) == '"') {
+			if(token2[0] == (byte) '"' && token2[token2.length - 1] == (byte) '"') {
 				
 				//Check for trailing bracket
-				if(token3.equals("{"))
+				if(areBytesEqual(token3, OPEN_CURLY))
 					return true;
 			}
 		}		
@@ -582,23 +647,90 @@ public class SoffitUtil {
 		//default determination of false
 		return false;
 	}
-
-	private static byte[] convertLineToBytes(String line) {
-		byte[] lineCharArray = new byte[line.length()];
-		//Convert to byte array.
-		for(int i = 0; i < line.length(); i++) {
-			lineCharArray[i] = (byte) line.charAt(i);
-		}
 	
-		return lineCharArray;
-	}
-	
-	private static boolean containsCharacter(String s, char c) {
-		for(int i = 0; i < s.length(); i++) {
-			if(s.charAt(i) == c)
+	private static boolean containsCharacter(byte[] s, char c) {
+		for(int i = 0; i < s.length; i++) {
+			if(s[i] == c)
 				return true;
 		}
 		
 		return false;
+	}
+	
+	private static boolean areBytesEqual(byte[] a, byte[] b) {
+		if(a.length != b.length)
+			return false;
+		
+		for(int i = 0; i < a.length; i++) {
+			if(a[i] != b[i])
+				return false;
+		}
+		
+		return true;
+	}
+}
+
+/**
+ * This class is essentially a fixed-length ByteArrayOutputStream with some specific features that help in the SoffitUtil class.
+ * This class performs NO bounds checking on the buffer to increase speed.
+ */
+class ArrayOutputStream extends OutputStream {
+	byte[] buffer;
+	int pos = 0;
+	int mark = 0;
+	
+	public ArrayOutputStream(int bufferSize) {
+		buffer = new byte[bufferSize];
+	}
+
+	@Override
+	public void write(int b) throws IOException {
+		buffer[pos] = (byte) b;
+		pos++;
+	}
+	
+	@Override
+	public void write(byte[] b) {
+		System.arraycopy(b, 0, buffer, pos, b.length);
+		pos += b.length;
+	}
+	
+	@Override
+	public void write(byte[] b, int off, int len) {
+		System.arraycopy(b, 0, buffer, pos, len);
+		pos += len;
+	}
+	
+	public void reset() {
+		pos = 0;
+		mark = 0;
+	}
+	
+	public void resetMark() {
+		mark = 0;
+	}
+	
+	public void mark() {
+		mark = pos;
+	}
+	
+	public void goToMark() {
+		pos = mark;
+	}
+	
+	public void pipeToOutputStream(OutputStream os) throws IOException {
+		os.write(buffer, 0, pos);
+	}
+	
+	public byte[] getWrittenBytes() {
+		byte[] copy = new byte[pos];
+		System.arraycopy(buffer, 0, copy, 0, pos);
+		return copy;
+	}
+	
+	public byte[] getWrittenBytesFromMark() {
+		byte[] copy = new byte[pos - mark];
+		System.arraycopy(buffer, mark, copy, 0, copy.length);
+		return copy;
 	}
 }
